--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
                             <i class="fas fa-bolt text-blue-400 text-xl"></i>
                         </div>
                         <span class="font-bold text-sm">Turbo Ad</span>
-                        <span class="text-[10px] text-slate-500">Earn ₱0.0075</span>
+                        <span class="text-[10px] text-slate-500">Earn ₱0.0086</span>
                     </button>
                     <button onclick="app.playAd('pop')" class="ad-btn glass p-6 rounded-3xl flex flex-col items-center hover:bg-slate-800 transition">
                         <div class="w-12 h-12 rounded-full bg-purple-500/20 flex items-center justify-center mb-3">
                             <i class="fas fa-rocket text-purple-400 text-xl"></i>
                         </div>
                         <span class="font-bold text-sm">Premium Ad</span>
-                        <span class="text-[10px] text-slate-500">Earn ₱0.0075</span>
+                        <span class="text-[10px] text-slate-500">Earn ₱0.0086</span>
                     </button>
                 </div>
             </section>
@@ -130,7 +130,7 @@ id="sec-referral" class="hidden space-y-4">
                 </div>
             </section>
 
-             <!-- Leaderboard -->
+            <!-- Leaderboard -->
             <section id="sec-leaderboard" class="hidden space-y-3">
                 <h3 class="font-bold text-lg">Global Ranking</h3>
                 <div id="leaderboard-list" class="space-y-2"></div>
@@ -162,7 +162,9 @@ id="sec-referral" class="hidden space-y-4">
                     <button onclick="app.showCreateTopicModal()" class="bg-yellow-500 text-black px-4 py-2 rounded-lg font-bold text-sm">New Topic</button>
                 </div>
                 <div id="topics-list" class="space-y-3">
-                    <p class="text-center text-slate-500 py-10">No topics yet. Be the first!</p>
+                    <p class="text-center text-slate-500 py-10">No topic
+
+s yet. Be the first!</p>
                 </div>
             </section>
 
@@ -213,7 +215,9 @@ id="sec-referral" class="hidden space-y-4">
                         <i class="fas fa-external-link-alt ml-auto text-xs text-slate-500"></i>
                     </a>
                     <a href="https://www.facebook.com/profile.php?id=61586281245735" target="_blank" class="flex items-center gap-3 text-white hover:text-yellow-500 transition">
-                        <i class="fab fa-facebook-f text-xl text-blue-600"></i>
+                        <i class="fab fa-facebook-f text-xl text-blue-60
+
+0"></i>
                         <span class="font-medium">Facebook Page</span>
                         <i class="fas fa-external-link-alt ml-auto text-xs text-slate-500"></i>
                     </a>
