--- a/index.html
+++ b/index.html
@@ -96,9 +96,7 @@
             </section>
 
             <!-- Referrals Section -->
-            <section
-
-id="sec-referral" class="hidden space-y-4">
+            <sectionid="sec-referral" class="hidden space-y-4">
                 <div class="gold-gradient p-6 rounded-3xl text-slate-900">
                     <h3 class="font-black text-xl mb-1">Affiliate Program</h3>
                     <p class="text-sm font-medium opacity-80">Earn 8% lifetime commission from every ad your friends watch.</p>
@@ -162,9 +160,7 @@ id="sec-referral" class="hidden space-y-4">
                     <button onclick="app.showCreateTopicModal()" class="bg-yellow-500 text-black px-4 py-2 rounded-lg font-bold text-sm">New Topic</button>
                 </div>
                 <div id="topics-list" class="space-y-3">
-                    <p class="text-center text-slate-500 py-10">No topic
-
-s yet. Be the first!</p>
+                    <p class="text-center text-slate-500 py-10">No topics yet. Be the first!</p>
                 </div>
             </section>
 
@@ -215,9 +211,7 @@ s yet. Be the first!</p>
                         <i class="fas fa-external-link-alt ml-auto text-xs text-slate-500"></i>
                     </a>
                     <a href="https://www.facebook.com/profile.php?id=61586281245735" target="_blank" class="flex items-center gap-3 text-white hover:text-yellow-500 transition">
-                        <i class="fab fa-facebook-f text-xl text-blue-60
-
-0"></i>
+                        <i class="fab fa-facebook-f text-xl text-blue-600"></i>
                         <span class="font-medium">Facebook Page</span>
                         <i class="fas fa-external-link-alt ml-auto text-xs text-slate-500"></i>
                     </a>
