--- a/index.html
+++ b/index.html
@@ -70,6 +70,23 @@
                 </div>
             </div>
         </div>
+        <div class="card">
+                <h4>🤝 INVITE FRIENDS</h4>
+                <div style="display: flex; gap: 8px;">
+                    <input type="text" id="ref-binder" placeholder="Referrer Username">
+                    <button class="btn btn-blue" style="width: 100px; font-size: 0.7rem;" onclick="bindReferrer()">BIND</button>
+                </div>
+                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-top: 15px;">
+                    <div style="background:rgba(255,255,255,0.03); padding:12px; border-radius:15px; text-align:center;">
+                        <small>Total Invites</small><br><b id="txt-ref-c">0</b>
+                    </div>
+                    <div style="background:rgba(255,255,255,0.03); padding:12px; border-radius:15px; text-align:center;">
+                        <small>Bonus Pool</small><br><b id="txt-ref-b">₱0.00</b>
+                    </div>
+                </div>
+                <button class="btn btn-gold" style="margin-top:15px;" onclick="claimBonus()">CLAIM REWARDS</button>
+            </div>
+        </div>
 
         <!-- LEADERBOARD PAGE -->
         <div id="leaderboard" class="page">
