--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+Daily ad Schedule of reward  1:00pm-6:00pm=0.0102 per ad 6:01pm-7:00am=0.0065 per ad 7:01am-12:59pm=0.0080 per ad
 <!DOCTYPE html>
 <html lang="en">
 <head>
