--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ Daily ad Schedule of reward  1:00pm-6:00pm=0.0102 per ad 6:01pm-7:00am=0.0065 pe
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    
+<meta name="popads-verification-3633431" value="fd5f0cfedc71c1eadc0235cd6b1b67ed" />
       <!-- Adsterra Popunder Script (Place these early in the head or body) -->
     <script src="https://pl27853087.effectivegatecpm.com/fa/f9/df/faf9df00762374e3ad9510afe003e978.js"></script>
     <script>
