Insert external scripts in index.html
Added multiple script tags for external resources.

--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@ Daily ad Schedule of reward  1:00pm-6:00pm=0.0102 per ad 6:01pm-7:00am=0.0065 pe
         .btn-grad { background: linear-gradient(135deg, #00a8ff 0%, #0097e6 100%); color: white; transition: 0.3s; }
         .btn-grad:active { transform: scale(0.95); }
         .cooldown-text { font-size: 0.75rem; color: #f97316; margin-top: 5px; }
-    </style>
+    </style><script>(function(s){s.dataset.zone='10601128',s.src='https://nap5k.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+  <script>(function(s){s.dataset.zone='10601128',s.src='https://nap5k.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script><script>(function(s){s.dataset.zone='10601128',s.src='https://nap5k.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+    <script>(function(s){s.dataset.zone='10109465',s.src='https://groleegni.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+    
 </head>
 <body>
 
