--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@ Daily ad Schedule of reward  1:00pm-6:00pm=0.0102 per ad 6:01pm-7:00am=0.0065 pe
     </script>
     <script src="https://www.highperformanceformat.com/fe70943384c0314737bd62c05e3d520a/invoke.js"></script>
     <script src="https://pl27853087.effectivegatecpm.com/fa/f9/df/faf9df00762374e3ad9510afe003e978.js"></script>
-    <!-- End Adsterra Popunder --><!-- Adsterra Popunder Script (Place these early in the head or body) -->
+    <!-- End Adsterra Popunder -->
+    <script>(function(s){s.dataset.zone='10671599',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+    <!-- Adsterra Popunder Script (Place these early in the head or body) -->
     <script src="https://pl27853087.effectivegatecpm.com/fa/f9/df/faf9df00762374e3ad9510afe003e978.js"></script>
     <script>
       atOptions = {
